# Medusa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  medusa.doxy
Architecture/: Architecture-15-04-21.asta
MedusaDart/: README.md  pubspec.yaml
MedusaDart/web/: countDown.html  index.html  instructionPage.html  loadObject.dart  loadingPage.html  main.dart  mainPage.html  wsclient.dart
MedusaDart/web/js/: countDown.js  loading.js  loadingPage.js  mainPage.js  startPage.js
MedusaDart/web/styles/: countDown.css  instructionPage.css  loadingPage.css  mainPage.css  startPage.css  sweetalert.css
cmake/Modules/: Findbsoncxx.cmake  Findmongocxx.cmake
gtest/: CMakeLists.txt
include/: Kinect.h  KinectManager.h  Medusa.h  calibration.h  debug_helpers.h  kinect.h  kinect_depth.h  mongo.h  renderMesh.h  texture.h  websocket.h
rapport/: rapport.aux  rapport.fdb_latexmk  rapport.lof  rapport.lot  rapport.tex  rapport.toc
scanning/: test.cpp
src/: Kinect.cpp  KinectManager.cpp  MD5.cpp  Medusa.cpp  calibration.cpp  connect.html  data_test.pcd  kinect.cpp  kinect_depth.cpp  kinect_depth.h  loadPCD.cpp  main.cpp  mainRender.cpp  mongo.cpp  openni_grabber.cpp  pclFunctionsForFile.cpp  renderMesh.cpp  renderMesh.h  syncingImages.m  texture.cpp  websocket.cpp  write_xml_file.cpp
styles/: mainPage.css
test/: kinectTest.cpp
